fix scrollbar gutter and update images

--- a/style.css
+++ b/style.css
@@ -39,10 +39,7 @@
 html {
     height: 100%;
     overflow-y: scroll;
-}
-
-body {
-    height: 100%;
+    scrollbar-gutter: stable;
 }
 
 body {
